syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
}

message DeleteUserRequest {
  string id = 1;
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message UserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message GetUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
} 